--- a/style.css
+++ b/style.css
@@ -72,6 +72,14 @@ a:hover {
     background-color: rgb(83, 109, 83);
 }
 
+@media screen and (max-width: 600px) {
+    #groceries {
+        display: grid;
+        grid-template-columns: auto;
+        margin-top: 10px;
+    }
+}
+
 .img img {
     width: 100%;
     height: 180px;
@@ -93,7 +101,7 @@ input {
 .details {
     border-radius: 25px;
     height: 40px;
-    width: 500px;
+    width: 90%;
 }
 
 .num {
